hphp/hack/test/typecheck/array/disallow_one_type_parameter_for_darray.php.exp
File "disallow_one_type_parameter_for_darray.php", line 3, characters 30-30:
A type specifier is expected here. (Parsing[1002])
